terraform/stage/vpc.tf
resource "google_compute_firewall" "allow_http" {
  name    = "allow-http"
  network = "default"

  allow {
    protocol = "tcp"
    ports    = ["80"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["http-server"]
}

resource "google_compute_firewall" "allow_https" {
  name    = "allow-https"
  network = "default"

  allow {
    protocol = "tcp"
    ports    = ["443"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["https-server"]
}

resource "google_compute_firewall" "allow_git" {
  name    = "allow-git"
  network = "default"

  allow {
    protocol = "tcp"
    ports    = ["22", "8079"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["gitlab-server"]
}
